--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Test U.S. Forms System</title>
+    <title>Trio Programs Application</title>
   </head>
   <body>
     <div id='root'></div>
